--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -244,16 +244,20 @@
                       </p>
                     </div>
                     <div class="history-inner-prove">
-                      <img src="./assets/img/gioithieu/microsoft-partner.png" alt="" />
-                      <p>
-                        Hiện Vũ Thảo là Microsoft Partner - đối tác vàng với
-                        Microsoft – với năng lực chuyên sâu trong lĩnh vực
-                        cung cấp giải pháp các phần mềm trên nền tảng
-                        Microsoft. Chúng tôi tự hào là công ty phát triển ứng
-                        dụng SharePoint đầu tiên tại Việt Nam, đã thực hiện
-                        thành công nhiều dự án cho các tập đoàn lớn trong và
-                        ngoài nước.
-                      </p>
+                      <div class="prove-img">
+                        <img src="./assets/img/gioithieu/microsoft-partner.png" alt="" />
+                      </div>
+                      <div class="prove-text">
+                        <p>
+                          Hiện Vũ Thảo là Microsoft Partner - đối tác vàng với
+                          Microsoft – với năng lực chuyên sâu trong lĩnh vực
+                          cung cấp giải pháp các phần mềm trên nền tảng
+                          Microsoft. Chúng tôi tự hào là công ty phát triển ứng
+                          dụng SharePoint đầu tiên tại Việt Nam, đã thực hiện
+                          thành công nhiều dự án cho các tập đoàn lớn trong và
+                          ngoài nước.
+                        </p>
+                      </div>
                     </div>
                     <div class="history-inner-swipper">
                       <!-- Swiper -->
