--- a/tuyen-dung.html
+++ b/tuyen-dung.html
@@ -174,7 +174,6 @@
                 <div class="header-filter">
                   <div class="header-navbar-search">
                     <div class="header-navbar-wrapper searchToggle">
-                      <i class="ic-close close"></i>
                       <i class="ic-search search" title="Tìm kiếm"></i>
                     </div>
                     <div class="header-navbar-field">
@@ -230,8 +229,8 @@
         <div class="container">
           <div class="location-wrap">
             <div class="location-inner">
-              <div class="location-inner-column hvr-reveal form-01" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                data-aos-delay="100" data-aos-offset="0">
+              <div class="location-inner-column hvr-reveal form-01" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back" data-aos-delay="100" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
                     <a href="tuyen-dung-01.html">
@@ -254,8 +253,8 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal form-02" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                data-aos-delay="200" data-aos-offset="0">
+              <div class="location-inner-column hvr-reveal form-02" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back" data-aos-delay="200" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
                     <a href="tuyen-dung-01.html">
@@ -278,8 +277,8 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal form-03" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                data-aos-delay="300" data-aos-offset="0">
+              <div class="location-inner-column hvr-reveal form-03" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
                     <a href="tuyen-dung-01.html">
@@ -302,8 +301,8 @@
                   </div>
                 </div>
               </div>
-              <div class="location-inner-column hvr-reveal form-04" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
-                data-aos-delay="400" data-aos-offset="0">
+              <div class="location-inner-column hvr-reveal form-04" data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
                     <a href="tuyen-dung-01.html">
@@ -414,7 +413,8 @@
                     <a href="#" class="hover">Người đại diện: Trần Thanh Phong</a>
                   </li>
                   <li>
-                    <a href="#" class="hvr-wobble-horizontal">Email: <span>lienhe@vuthao.com</span></a>
+                    <a href="#" class="hvr-wobble-horizontal">Email:
+                      <span>lienhe@vuthao.com</span></a>
                   </li>
                   <li>
                     <a href="#" class="hvr-wobble-horizontal">Hotline: 090 117 0659</a>
@@ -572,20 +572,19 @@
       </div>
       <div class="footer-box-policy">
         <div class="policy-box">
-          <a href="#">
+          <a href="dieu-khoan-quy-dinh.html">
             <p>Điều khoản quy định</p>
           </a>
-          <a href="#">
+          <a href="dieu-khoan-quy-dinh.html">
             <p>Chính sách quy định</p>
           </a>
-          <a href="#">
+          <a href="chinh-sach-chat-luong.html">
             <p>Chính sách chất lượng</p>
           </a>
         </div>
       </div>
     </div>
   </footer>
-
   <script src="./js/library/aos/aos.js"></script>
   <script src="./js/library/swiper/swiper-bundle-min.js"></script>
   <script src="./js/main.js" type="module"></script>
