--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -1932,7 +1932,7 @@
                 <a href="dieu-khoan-quy-dinh.html">
                     <p>Điều khoản quy định</p>
                 </a>
-                <a href="dieu-khoan-quy-dinh.html">
+                <a href="chinh-sach-bao-mat-thong-tin.html">
                     <p>Chính sách quy định</p>
                 </a>
                 <a href="chinh-sach-chat-luong.html">
