--- a/chinh-sach-chat-luong.html
+++ b/chinh-sach-chat-luong.html
@@ -593,7 +593,7 @@
                     <a href="dieu-khoan-quy-dinh.html">
                         <p>Điều khoản quy định</p>
                     </a>
-                    <a href="dieu-khoan-quy-dinh.html">
+                    <a href="chinh-sach-bao-mat-thong-tin.html">
                         <p>Chính sách quy định</p>
                     </a>
                     <a href="chinh-sach-chat-luong.html">
