--- a/assets/icon/iconfont/index.html
+++ b/assets/icon/iconfont/index.html
@@ -9,14 +9,28 @@
     <link rel="stylesheet" href="style.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> iconfont <small class="fgc1">(Glyphs:&nbsp;10)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> iconfont <small class="fgc1">(Glyphs:&nbsp;11)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="ic-close1"></span>
-                <span class="mls"> ic-close1</span>
+                <span class="ic-right-arrow"></span>
+                <span class="mls"> ic-right-arrow</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e90a" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe90a;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="ic-line"></span>
+                <span class="mls"> ic-line</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e908" class="unit size1of2" />
