--- a/quan-ly-qui-trinh-lam-viec-Workflow-management.html
+++ b/quan-ly-qui-trinh-lam-viec-Workflow-management.html
@@ -263,7 +263,7 @@
                                 vụ (BPM) để cải thiện năng suất, hiệu quả làm việc nhân viên, tăng chất lượng dịch vụ
                                 khách hàng và đạt được mục tiêu giảm chi phí, tăng lợi nhuận.&nbsp;&nbsp;
                                 <div style="text-align:center;"><br>
-                                    <img src="/Pictures2013/Workflow%20Designer.png" alt="Công cụ thết kế quy trình"
+                                    <img src="..../Pictures2013/Workflow Designer.png" alt="Công cụ thết kế quy trình"
                                         title="Workflow Designer">&nbsp;
                                 </div>
                                 <p><span
@@ -313,7 +313,7 @@
                                     <tbody>
                                         <tr>
                                             <td valign="top"><img alt="" height="61" width="114"
-                                                    src="/PublishingImages/img-VTProduct/image003.jpg"></td>
+                                                    src="../PublishingImages/img-VTProduct/image003.jpg"></td>
                                             <td valign="top">
                                                 <h3>Dễ sử dụng và mở rộng</h3>
                                                 <ul>
@@ -331,7 +331,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top">&nbsp;<img alt="" height="70" width="70"
-                                                    src="/Pictures2013/SharePoint.png"></td>
+                                                    src="../Pictures2013/SharePoint.png"></td>
                                             <td valign="top">&nbsp;<span
                                                     style="font-size:1.15em;font-weight:bold;font-style:inherit;font-variant:inherit;line-height:inherit;color:#262626;">Tận
                                                     dụng hoàn toàn SharePoint</span>
@@ -355,7 +355,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt="" height="67" width="66"
-                                                    src="/PublishingImages/img-VTProduct/image056.jpg"></td>
+                                                    src="../PublishingImages/img-VTProduct/image056.jpg"></td>
                                             <td valign="top">
                                                 <h3>Biểu mẫu điện tử - eForm</h3>
                                                 <p>Cung cấp một giải pháp tuyệt vời là sử dụng Excel spreadsheet làm
@@ -376,7 +376,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt="" height="61" width="72"
-                                                    src="/PublishingImages/img-VTProduct/image057.jpg"></td>
+                                                    src="../PublishingImages/img-VTProduct/image057.jpg"></td>
                                             <td valign="top">
                                                 <h3>Kết hợp với tài liệu</h3>
                                                 <p>Hỗ trợ gắn thêm nhiều file đính kèm tại mỗi bước của quy trình. Cho
@@ -386,7 +386,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top">&nbsp;<img alt="" height="75" width="80"
-                                                    src="/Pictures2013/Quitrinh6buoc.png"><br>
+                                                    src="../Pictures2013/Quitrinh6buoc.png"><br>
                                             </td>
                                             <td valign="top">
                                                 <h3>Thiết lập quy trình nghiệp vụ trực quan</h3>
@@ -403,7 +403,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt=""
-                                                    src="/PublishingImages/img-VTProduct/image009.png"></td>
+                                                    src="../PublishingImages/img-VTProduct/image009.png"></td>
                                             <td valign="top">
                                                 <h3>Thông báo email&nbsp;</h3>
                                                 <p>Gửi email Thông báo nhắc khi có việc được hệ thống phân công. Hằng
@@ -414,7 +414,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt=""
-                                                    src="/PublishingImages/img-VTProduct/image059.jpg"></td>
+                                                    src="../PublishingImages/img-VTProduct/image059.jpg"></td>
                                             <td valign="top">
                                                 <h3>Thiết lập Người tham gia xử lý trong quy trình</h3>
                                                 <p>Hỗ trợ khai báo xử lý tại mỗi bước theo cá nhân, nhóm, vai trò, chức
@@ -432,7 +432,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt=""
-                                                    src="/PublishingImages/img-VTProduct/image060.png"></td>
+                                                    src="../PublishingImages/img-VTProduct/image060.png"></td>
                                             <td valign="top">
                                                 <h3></h3>
                                                 <h3> Mô hình luồng quy trình nghiệp vụ</h3>
@@ -440,12 +440,12 @@
                                                     bước). Tại mỗi bước có thể gồm một hoặc nhiều người xử lý song song
                                                     hoặc tuần tự hoặc là kết quả một số quy tắc đã thiết lập sẳn.</p>
                                                 <p><img alt="Worflow.png"
-                                                        src="/PublishingImages/Quan-ly-qui-trinh-lam-viec-Workflow-management/Worflow.png"
+                                                        src="../PublishingImages/Quan-ly-qui-trinh-lam-viec-Workflow-management/Worflow.png"
                                                         style="margin:5px;width:481px;">&nbsp;</p>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td valign="top"><img alt="" src="/Pictures2013/Dashboard.png"><br>
+                                            <td valign="top"><img alt="" src="../Pictures2013/Dashboard.png"><br>
                                             </td>
                                             <td valign="top">
                                                 <h3>Báo cáo và Dashboard</h3>
@@ -457,7 +457,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt=""
-                                                    src="/PublishingImages/img-VTProduct/image062.png"></td>
+                                                    src="../PublishingImages/img-VTProduct/image062.png"></td>
                                             <td valign="top">
                                                 <h3>Quản lý công việc - Task Management</h3>
                                                 <p>Cung cấp Danh sách việc cần xử lý (To-do list), tập hợp các nhiệm vụ
@@ -470,7 +470,7 @@
                                         </tr>
                                         <tr>
                                             <td valign="top"><img alt="" height="92" width="79"
-                                                    src="/PublishingImages/img-VTProduct/image011.png"></td>
+                                                    src="../PublishingImages/img-VTProduct/image011.png"></td>
                                             <td valign="top">
                                                 <h3>Biểu thị tình trạng nhiệm vụ - Tasks Status Indicators</h3>
                                                 <p>Hiển thị trực quan màu mô tả tình trạng của nhiệm vụ được giao, giúp
