--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -258,7 +258,7 @@
                         </p>
                       </div>
                     </div>
-                    <div class="history-inner-swipper">
+                    <div class="history-inner-swiper">
                       <!-- Swiper -->
                       <div class="swiper">
                         <div class="swiper-wrapper">
