--- a/backend-developer.html
+++ b/backend-developer.html
@@ -258,78 +258,56 @@
                       <h4>Yêu cầu công việc</h4>
                     </div>
                     <div class="detail-box-table">
-                      <table>
-                        <tr>
-                          <th>
+                      <div class="list-table">
+                        <ul>
+                          <li>
                             Học vấn và kinh nghiệm
-                          </th>
-                          <th>
-                            Trình độ chuyên môn
-                          </th>
-                          <th>
-                            Kỹ năng mềm
-                          </th>
-                        </tr>
-                        <tr>
-                          <td>
-                            Tốt nghiệp Cao đẳng/ Đại học chuyên ngành CNTT, Toán Tin, Viễn thông…
-                          </td>
-                          <td>
-                            Có kinh nghiệm làm việc với: C#, ASP.Net, Web API.
-                          </td>
-                          <td>
-                            Có tư duy logic tốt + khả năng tự học
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
+                          </li>
+                          <li>
+                            Tốt nghiệp cao đẳng/ Đại học chuyên ngành CNTT, Toán Tin, Viễn thông …
+                          </li>
+                          <li>
                             Có tối thiểu 2 năm kinh nghiệm trở lên ở vị trí Developer
-                          </td>
-                          <td>
-                            Có kinh nghiệm làm việc cơ sở dữ liệu MS SQL Server.
-                          </td>
-                          <td>
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="list-table">
+                        <ul>
+                          <li>
+                            Trình độ chuyên môn
+                          </li>
+                          <li>
+                            Có kinh nghiệm làm việc với: C#, ASP.Net, Web API.
+                          </li>
+                          <li>
+                            Có kinh nghiệm làm việc cơ sở dữ liệu MS SQL Server
+                          </li>
+                          <li>
+                            Có kiến thức về lập trình hướng đối tượng tốt
+                          </li>
+                        </ul>
+                      </div>
+                      <div class="list-table">
+                        <ul>
+                          <li>
+                            Kỹ năng mềm
+                          </li>
+                          <li>
+                            Có tư duy logic tốt + khả năng tự học
+                          </li>
+                          <li>
                             Có khả năng chịu áp lực công việc tốt
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-
-                          </td>
-                          <td>
-                            Có kiến thức về lập trình hướng đối tượng tốt.
-                          </td>
-                          <td>
-                            Có trách nhiệm, nhiệt huyết với công việc
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-
-                          </td>
-                          <td>
-
-                          </td>
-                          <td>
-                            Có khả năng đọc hiểu tài liệu tiếng Anh.
-                          </td>
-                        </tr>
-                      </table>
+                          </li>
+                          <li>
+                            Có trách nhiệm, nhiệt huyết trong công việc
+                          </li>
+                          <li>
+                            Có khả năng đọc hiểu tài liệu tiếng anh
+                          </li>
+                        </ul>
+                      </div>
                     </div>
                   </div>
-                  <!-- <div class="detail-box" data-aos="fade-down" data-aos-easing="ease-in-back" data-aos-delay="400"
-                    data-aos-offset="0">
-                    <div class="detail-box-title">
-                      <h4>Yêu cầu</h4>
-                    </div>
-                    <ul class="detail-box-jd">
-                      <li>
-                        2 - 4 năm kinh nghiệm làm việc trong lĩnh vực bán giải
-                        pháp phần mềm.
-                      </li>
-                      <li>Sẵn sàng làm việc trong múi giờ linh hoạt.</li>
-                    </ul>
-                  </div> -->
                 </div>
                 <div class="detail-form">
                   <h3>Lập trình viên Backend (Backend Developer)</h3>
@@ -395,27 +373,27 @@
         <div class="container">
           <div class="location-wrap">
             <div class="location-title">
-              <h3>Vị trí công việc liên quan</h3>
+              <h3>TIN TUYỂN DỤNG KHÁC</h3>
             </div>
             <div class="location-inner">
               <div class="location-inner-column hvr-reveal form-01" data-aos="fade-zoom-in"
                 data-aos-easing="ease-in-back" data-aos-delay="100" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="backend-developer.html">
                       <h3>
-                        Nhân viên phát triển phần mềm - <span>Developer</span>
+                        Lập trình viên Backend - <br> <span>Backend Developer</span>
                       </h3>
                       <!-- <i class="ic-right"></i> -->
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
-                      <p>Kinh nghiệm: 2-3 năm</p>
+                    <a href="backend-developer.html">
+                      <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="backend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -426,21 +404,20 @@
                 data-aos-easing="ease-in-back" data-aos-delay="200" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-backend-developer.html">
                       <h3>
-                        Chuyên gia cơ sở dữ liệu - <br />
-                        <span>Senior database developer</span>
+                        Lập trình viên Backend cao cấp - <br> <span>Senior Backend Developer</span>
                       </h3>
                       <i class="ic-right"></i>
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
-                      <p>Kinh nghiệm: 1-2 năm</p>
+                    <a href="senior-backend-developer.html">
+                      <p>Kinh nghiệm: 4 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="senior-backend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -451,21 +428,20 @@
                 data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="frontend-developer.html">
                       <h3>
-                        Nhân viên kiểm thử phần mềm - <br />
-                        <span>Tester</span>
+                        Lập trình viên Frontend - <br> <span>Frontend Developer</span>
                       </h3>
                       <!-- <i class="ic-right"></i> -->
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
-                      <p>Kinh nghiệm: 2-3 năm</p>
+                    <a href="frontend-developer.html">
+                      <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="frontend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -476,33 +452,32 @@
                 data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-frontend-developer.html">
                       <h3>
-                        Chuyên viên phân tích dữ liệu - <br />
-                        <span> Business Analyst</span>
+                        Lập trình viên Frontend cao cấp - <br> <span>Frontend Senior Developer</span>
                       </h3>
                       <i class="ic-right"></i>
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
-                      <p>Kinh nghiệm: 2-3 năm</p>
+                    <a href="senior-frontend-developer.html">
+                      <p>Kinh nghiệm: 4 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="senior-frontend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
                   </div>
                 </div>
               </div>
-              <div class="location-inner hidden">
+              <div class="location-inner hidden" style="display: none;">
                 <div class="location-inner-column hvr-reveal form-02" data-aos="fade-zoom-in"
                   data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
                   <div class="location-inner-box">
                     <div class="location-list">
-                      <a href="tuyen-dung-01.html">
+                      <a href="project-manager.html">
                         <h3>
                           Quản lý dự án - <br> <span>Project Manager</span>
                         </h3>
@@ -510,12 +485,12 @@
                       </a>
                     </div>
                     <div class="location-exp">
-                      <a href="tuyen-dung-01.html">
+                      <a href="project-manager.html">
                         <p>Kinh nghiệm: 5 năm</p>
                       </a>
                     </div>
                     <div class="location-details">
-                      <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                      <a href="project-manager.html" class="hvr-wobble-horizontal">
                         <p>Xem chi tiết</p>
                         <i class="ic-right"></i>
                       </a>
@@ -526,7 +501,7 @@
                   data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="0">
                   <div class="location-inner-box">
                     <div class="location-list">
-                      <a href="tuyen-dung-01.html">
+                      <a href="software-tester.html">
                         <h3>
                           Nhân viên kiểm thử phần mềm - <br> <span>Tester</span>
                         </h3>
@@ -534,12 +509,12 @@
                       </a>
                     </div>
                     <div class="location-exp">
-                      <a href="tuyen-dung-01.html">
+                      <a href="software-tester.html">
                         <p>Kinh nghiệm: 2 năm</p>
                       </a>
                     </div>
                     <div class="location-details">
-                      <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                      <a href="software-tester.html" class="hvr-wobble-horizontal">
                         <p>Xem chi tiết</p>
                         <i class="ic-right"></i>
                       </a>
@@ -550,7 +525,7 @@
                   data-aos-easing="ease-in-back" data-aos-delay="700" data-aos-offset="0">
                   <div class="location-inner-box">
                     <div class="location-list">
-                      <a href="tuyen-dung-01.html">
+                      <a href="business-analyst.html">
                         <h3>
                           Chuyên viên phân tích nghiệp vụ - <br> <span>Business Analyst</span>
                         </h3>
@@ -558,12 +533,12 @@
                       </a>
                     </div>
                     <div class="location-exp">
-                      <a href="tuyen-dung-01.html">
+                      <a href="business-analyst.html">
                         <p>Kinh nghiệm: 2 năm</p>
                       </a>
                     </div>
                     <div class="location-details">
-                      <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                      <a href="business-analyst.html" class="hvr-wobble-horizontal">
                         <p>Xem chi tiết</p>
                         <i class="ic-right"></i>
                       </a>
@@ -574,7 +549,7 @@
                   data-aos-easing="ease-in-back" data-aos-delay="800" data-aos-offset="0">
                   <div class="location-inner-box">
                     <div class="location-list">
-                      <a href="tuyen-dung-01.html">
+                      <a href="it-support.html">
                         <h3>
                           Nhân viên hỗ trợ khách hàng - <br> <span>IT Support</span>
                         </h3>
@@ -582,12 +557,12 @@
                       </a>
                     </div>
                     <div class="location-exp">
-                      <a href="tuyen-dung-01.html">
+                      <a href="it-support.html">
                         <p>Kinh nghiệm: 2 năm</p>
                       </a>
                     </div>
                     <div class="location-details">
-                      <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                      <a href="it-support.html" class="hvr-wobble-horizontal">
                         <p>Xem chi tiết</p>
                         <i class="ic-right"></i>
                       </a>
@@ -596,7 +571,17 @@
                 </div>
               </div>
               <div class="location-button">
-                <button class="button-click">Xem thêm</button>
+                <button id="show-hidden-menu" class="button-click button-change">Xem thêm</button>
+                <div class="scroll-prompt">
+                  <div class="scroll-prompt-arrow-container">
+                    <div class="scroll-prompt-arrow">
+                      <div></div>
+                    </div>
+                    <div class="scroll-prompt-arrow">
+                      <div></div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
