--- a/so-hoa-tai-lieu-dcm.html
+++ b/so-hoa-tai-lieu-dcm.html
@@ -253,7 +253,7 @@
                                     giây,&nbsp;<strong> VT bDocs - Cẩm nang văn bản, quy trình, thủ tục Online</strong>
                                     cung cấp một phương thức tự động xây dựng các web site công bố văn bản cực kỳ đơn
                                     giản và hiệu quả.</p>
-                                <div style="text-align:center;"><img alt="" src="/Pictures2013/img-edoc2VN.png"
+                                <div style="text-align:center;"><img alt="" src="../assets/img/Pictures2013/img-edoc2VN.png"
                                         style="line-height:1.5em;font-family:inherit;font-size:inherit;font-style:inherit;font-variant:inherit;font-weight:inherit;">&nbsp;
                                 </div>
                                 Phân hệ VT bDocs giúp dễ dàng và&nbsp;nhanh chóng xây dựng các thư viện và site văn bản,
@@ -303,7 +303,7 @@
                                     <li><strong>Giảm chí phí tạo, gửi và lưu trữ văn bản giấy</strong> tại tất cả đơn
                                         vị, chi nhánh.</li>
                                 </ul>
-                                <div style="text-align:center;"><img alt="" src="/Pictures2013/img-edocVN.png"
+                                <div style="text-align:center;"><img alt="" src="../assets/img/Pictures2013/img-edocVN.png"
                                         style="font-family:inherit;font-size:inherit;font-style:inherit;font-variant:inherit;font-weight:inherit;line-height:inherit;">&nbsp;
                                 </div>
                                 <p class="MsoNormal">Văn bản công bố trên web site được chuyển đối tự động thành dạng
@@ -328,7 +328,7 @@
                                         style="line-height:22px;font-family:wol_reg, 'segoe ui', tahoma, helvetica, sans-serif;font-size:16px;">&nbsp;</span>
                                 </p>
                             </div>
-                            <div style="text-align:center;"><img alt="" src="/Pictures2013/Cam_nang_van_ban_lap_qui.png"
+                            <div style="text-align:center;"><img alt="" src="../assets/img/Pictures2013/Cam_nang_van_ban_lap_qui.png"
                                     style="font-family:inherit;font-size:inherit;font-style:inherit;font-variant:inherit;font-weight:inherit;line-height:inherit;">&nbsp;
                             </div>
                             <br>
