--- a/tuyen-dung.html
+++ b/tuyen-dung.html
@@ -258,7 +258,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="200" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-backend-developer.html">
                       <h3>
                         Lập trình viên Backend cao cấp - <br> <span>Senior Backend Developer</span>
                       </h3>
@@ -266,12 +266,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-backend-developer.html">
                       <p>Kinh nghiệm: 4 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="senior-backend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -282,7 +282,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="300" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="frontend-developer.html">
                       <h3>
                         Lập trình viên Frontend - <br> <span>Frontend Developer</span>
                       </h3>
@@ -290,12 +290,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="frontend-developer.html">
                       <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="frontend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -306,7 +306,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-frontend-developer.html">
                       <h3>
                         Lập trình viên Frontend cao cấp - <br> <span>Frontend Senior Developer</span>
                       </h3>
@@ -314,12 +314,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="senior-frontend-developer.html">
                       <p>Kinh nghiệm: 4 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="senior-frontend-developer.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -330,7 +330,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="500" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="project-manager.html">
                       <h3>
                         Quản lý dự án - <br> <span>Project Manager</span>
                       </h3>
@@ -338,12 +338,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="project-manager.html">
                       <p>Kinh nghiệm: 5 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="project-manager.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -354,7 +354,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="600" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="software-tester.html">
                       <h3>
                         Nhân viên kiểm thử phần mềm - <br> <span>Tester</span>
                       </h3>
@@ -362,12 +362,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="software-tester.html">
                       <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="software-tester.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -378,7 +378,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="700" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="business-analyst.html">
                       <h3>
                         Chuyên viên phân tích nghiệp vụ - <br> <span>Business Analyst</span>
                       </h3>
@@ -386,12 +386,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="business-analyst.html">
                       <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="business-analyst.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
@@ -402,7 +402,7 @@
                 data-aos-easing="ease-in-back" data-aos-delay="800" data-aos-offset="0">
                 <div class="location-inner-box">
                   <div class="location-list">
-                    <a href="tuyen-dung-01.html">
+                    <a href="it-support.html">
                       <h3>
                         Nhân viên hỗ trợ khách hàng - <br> <span>IT Support</span>
                       </h3>
@@ -410,12 +410,12 @@
                     </a>
                   </div>
                   <div class="location-exp">
-                    <a href="tuyen-dung-01.html">
+                    <a href="it-support.html">
                       <p>Kinh nghiệm: 2 năm</p>
                     </a>
                   </div>
                   <div class="location-details">
-                    <a href="tuyen-dung-01.html" class="hvr-wobble-horizontal">
+                    <a href="it-support.html" class="hvr-wobble-horizontal">
                       <p>Xem chi tiết</p>
                       <i class="ic-right"></i>
                     </a>
