--- a/it-support.html
+++ b/it-support.html
@@ -619,17 +619,19 @@
                                 </div>
                             </div>
                             <div class="location-button">
-                                <button id="show-hidden-menu" class="button-click button-change">Xem thêm</button>
-                                <div class="scroll-prompt">
-                                    <div class="scroll-prompt-arrow-container">
-                                        <div class="scroll-prompt-arrow">
-                                            <div></div>
-                                        </div>
-                                        <div class="scroll-prompt-arrow">
-                                            <div></div>
+                                <button id="show-hidden-menu" class="button-click button-change">
+                                    Xem thêm
+                                    <div class="scroll-prompt">
+                                        <div class="scroll-prompt-arrow-container">
+                                            <div class="scroll-prompt-arrow">
+                                                <div></div>
+                                            </div>
+                                            <div class="scroll-prompt-arrow">
+                                                <div></div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
+                                </button>
                             </div>
                         </div>
                     </div>
