--- a/trinh-ky-so-online-dsign.html
+++ b/trinh-ky-so-online-dsign.html
@@ -280,7 +280,7 @@
                                             Trao đổi thông tin qua lại với nhau trên cùng một nền tảng
                                         </li>
                                         <li class="title">
-                                            <span>Kết nối đa chiều</span>
+                                            <span>Bảo mật</span>
                                             <br>
                                         </li>
                                         <li>
@@ -293,7 +293,7 @@
                                     </ul>
                                 </div>
                                 <div class="dsign-more">
-                                    <a href="#" class="hvr-wobble-horizontal">
+                                    <a href="https://ketnoiphang.com/dsign/" class="hvr-wobble-horizontal">
                                         Xem chi tiết
                                         <i class="ic-right-arrow"></i>
                                     </a>
