--- a/backend-developer.html
+++ b/backend-developer.html
@@ -571,7 +571,8 @@
                 </div>
               </div>
               <div class="location-button">
-                <button id="show-hidden-menu" class="button-click button-change">
+                <!-- Button auto type là sumit -> Sumit auto load lại trang -->
+                <button type="button" id="show-hidden-menu" class="button-click button-change">
                   Xem thêm
                   <div class="scroll-prompt">
                     <div class="scroll-prompt-arrow-container">
