--- a/email-form2.html
+++ b/email-form2.html
@@ -52,11 +52,11 @@
             <td colspan="4" style="padding: 0 20px; border-spacing:0;">
                 <table cellspacing="0"
                     style="border-spacing:0; border: 0; table-layout: fixed; width: 100%; border-radius: 0 0 6px 6px;-moz-border-radius: 0 0 6px 6px;-webkit-border-radius: 0 0 6px 6px;">
-                    <tr style="padding:0; border: 0; border-spacing:0;">
+                    <tr style="padding:0; border: 0; border-spacing:0;border-collapse: collapse;">
                         <td
                             style=" font-size:14px; border:0; background:#f8f8f8; padding:25px 20px; color:#000; text-align:left; border-spacing:0;border-radius: 0 0 6px 6px;-moz-border-radius: 0 0 6px 6px;-webkit-border-radius: 0 0 6px 6px;">
                             <table cellspacing="0"
-                                style="border-spacing:0; border: 0; table-layout: fixed; width: 100%;font-size:14px; border:0; background:#f8f8f8; padding: 0px 20px; color:#000; text-align:left; border-spacing:0;border-radius: 0 0 6px 6px;-moz-border-radius: 0 0 6px 6px;-webkit-border-radius: 0 0 6px 6px;">
+                                style="border-spacing:0; border: 0; table-layout: fixed; width: 100%;font-size:14px; border:0; background:#f8f8f8; padding: 0px 20px; color:#000; text-align:left; border-spacing:0;border-radius: 0 0 6px 6px;-moz-border-radius: 0 0 6px 6px;-webkit-border-radius: 0 0 6px 6px;border-collapse: collapse;">
                                 <tr>
                                     <td style="font-size: 13px; font-style: italic; width: 25%; padding-bottom: 20px;">Họ và tên:</td>
                                     <td style="font-size: 13px; width: 75%; padding-bottom: 20px">Lê Châu Oanh</td>
